syntax = "proto3";
option csharp_namespace = "LightningGraph.Serialization";

message SerializedFastLightningGraph {
  repeated Vertex vertices = 1;
  repeated Edge edges = 2;
  int32 next_vertex_id = 3;
}

message Vertex {
  int32 internal_id = 1;
  string node_id = 2;
}

message Edge {
  int32 from_id = 1;
  int32 to_id = 2;
  string scid = 3;
  double cost = 4;
  bool has_cost = 5;
}
