syntax = "proto3";

option csharp_namespace = "LightningGraph.Serialization";

message Weight {
  int64 base_m_sat = 1;
  int64 proportional_millionths = 2;
}

message Edge {
  string scid = 1;
  string from = 2;
  string to = 3;
  Weight weight = 4;
}

message GraphTopology {
  repeated Edge edges = 1;
}



